<resources>
    <string name="app_name">TrabalhoFInal</string>
    <string name="name">Série</string>
    <string name="genre">Gênero</string>
    <string name="seasons">Temporadas</string>
    <string name="select_photo">Selecionar Foto</string>
    <string name="save">Salvar</string>
    <string name="serie_image">Imagem Série</string>
    <string name="delete">Deletar</string>
    <string name="info">Informações</string>
    <string name="title">Trabalho Final - CRUD de Séries</string>
</resources>